# libinfinity

./: .gitignore  .travis.yml  AUTHORS  CNAME  ChangeLog  HACKING  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  index.html  libinfgtk-1.0.pc.in  libinfgtk.pc.in  libinfinity-1.0.pc.in  libinfinity.pc.in  libinfinoted-plugin-manager.pc.in  libinftext-1.0.pc.in  libinftext.pc.in  libinftextgtk-1.0.pc.in  libinftextgtk.pc.in  params.json  protocol.md  update-potfiles
docs/reference/: .gitignore  Makefile.am  api_version.xml.in  version.xml.in  version.xml.in.in
infinity/: Makefile.am  inf-buffer.c  inf-buffer.h  inf-config.h.in  inf-connection-manager.c  inf-connection-manager.h  inf-marshal.in  inf-net-object.c  inf-netobject.c  inf-netobject.h  inf-stroke.c  inf-stroke.h  inf-xml-stream.c
infinoted/: .gitignore  Makefile.am  infinoted-0.5.man  infinoted-0.6.man  infinoted-0.7.man  infinoted-autosave.c  infinoted-autosave.h  infinoted-config-reload.c  infinoted-config-reload.h  infinoted-creds.c  infinoted-creds.h  infinoted-dh-params.c  infinoted-dh-params.h  infinoted-directory-sync.c  infinoted-directory-sync.h  infinoted-log.c  infinoted-log.h  infinoted-main.c  infinoted-note-plugin.c  infinoted-note-plugin.h  infinoted-options.c  infinoted-options.h  infinoted-pam.c  infinoted-pam.h  infinoted-parameter.c  infinoted-parameter.h  infinoted-plugin-manager.c  infinoted-plugin-manager.h  infinoted-record.c  infinoted-record.h  infinoted-run.c  infinoted-run.h  infinoted-signal.c  infinoted-signal.h  infinoted-startup.c  infinoted-startup.h  infinoted-traffic-logger.c  infinoted-traffic-logger.h  infinoted-transformation-protector.c  infinoted-transformation-protector.h  (+2 more)
infinoted/note-plugins/: Makefile.am
infinoted/plugins/: Makefile.am  infinoted-plugin-autosave.c  infinoted-plugin-certificate-auth.c  infinoted-plugin-dbus.c  infinoted-plugin-directory-sync.c  infinoted-plugin-document-stream.c  infinoted-plugin-http.c  infinoted-plugin-linekeeper.c  infinoted-plugin-logging.c  infinoted-plugin-note-chat.c  infinoted-plugin-note-text.c  infinoted-plugin-record.c  infinoted-plugin-traffic-logging.c  infinoted-plugin-transformation-protection.c
libinfgtk/: .gitignore  Makefile.am  inf-gtk-account-creation-dialog.c  inf-gtk-account-creation-dialog.h  inf-gtk-acl-sheet-view.c  inf-gtk-acl-sheet-view.h  inf-gtk-browser-model-filter.c  inf-gtk-browser-model-filter.h  inf-gtk-browser-model-sort.c  inf-gtk-browser-model-sort.h  inf-gtk-browser-model.c  inf-gtk-browser-model.h  inf-gtk-browser-store.c  inf-gtk-browser-store.h  inf-gtk-browser-view.c  inf-gtk-browser-view.h  inf-gtk-certificate-dialog.c  inf-gtk-certificate-dialog.h  inf-gtk-certificate-manager.c  inf-gtk-certificate-manager.h  inf-gtk-certificate-view.c  inf-gtk-certificate-view.h  inf-gtk-chat.c  inf-gtk-chat.h  inf-gtk-connection-view.c  inf-gtk-connection-view.h  inf-gtk-io.c  inf-gtk-io.h  inf-gtk-permissions-dialog.c  inf-gtk-permissions-dialog.h
libinfgtk/resources/: infgtk.gresources.xml
libinfinited/: Makefile.am  infd-directory-storage.c  infd-directory-storage.h  infd-directory.c  infd-directory.h  infd-marshal.in  infd-note-plugin.h  infd-server.c  infd-server.h  infd-session.c  infd-session.h  infd-storage.c  infd-storage.h
libinfinity/: .gitignore  InfGnutls-3.0.gir  InfGsasl-1.0.gir  Makefile.am  inf-buffer.c  inf-buffer.h  inf-config.h.in  inf-connection-manager.c  inf-connection-manager.h  inf-connection.c  inf-connection.h  inf-define-enum.h  inf-discovery-info.c  inf-discovery.c  inf-discovery.h  inf-dll.c  inf-dll.h  inf-error.c  inf-error.h  inf-i18n.c  inf-i18n.h  inf-ink-buffer.c  inf-ink-buffer.h  inf-ink-stroke.c  inf-ink-stroke.h  inf-io.c  inf-io.h  inf-ip-address.c  inf-ip-address.h  inf-marshal.in  inf-net-object.c  inf-net-object.h  inf-session.c  inf-session.h  inf-signals.c  inf-signals.h  inf-standalone-io.c  inf-standalone-io.h  inf-stroke.c  inf-stroke.h  (+13 more)
libinfinity/adopted/: Makefile.am  inf-adopted-algorithm.c  inf-adopted-algorithm.h  inf-adopted-concurrency-warning.c  inf-adopted-concurrency-warning.h  inf-adopted-no-operation.c  inf-adopted-no-operation.h  inf-adopted-operation.c  inf-adopted-operation.h  inf-adopted-request-log.c  inf-adopted-request-log.h  inf-adopted-request.c  inf-adopted-request.h  inf-adopted-session-record.c  (+13 more)
libinftext/: .gitignore  Makefile.am  inf-text-buffer.c  inf-text-buffer.h  inf-text-chunk.c  inf-text-chunk.h  inf-text-default-buffer.c  inf-text-default-buffer.h  inf-text-default-delete-operation.c  inf-text-default-delete-operation.h  inf-text-default-insert-operation.c  inf-text-default-insert-operation.h  inf-text-delete-operation.c  inf-text-delete-operation.h  inf-text-filesystem-format.c  inf-text-filesystem-format.h  inf-text-fixline-buffer.c  inf-text-fixline-buffer.h  inf-text-insert-operation.c  inf-text-insert-operation.h  inf-text-move-operation.c  inf-text-move-operation.h  inf-text-operations.h  inf-text-pword.c  inf-text-pword.h  inf-text-remote-delete-operation.c  inf-text-remote-delete-operation.h  inf-text-session.c  inf-text-session.h  inf-text-undo-grouping.c  inf-text-undo-grouping.h  inf-text-user.c  inf-text-user.h
libinftextgtk/: .gitignore  Makefile.am  inf-text-gtk-buffer.c  inf-text-gtk-buffer.h  inf-text-gtk-hue-chooser.c  inf-text-gtk-hue-chooser.h  inf-text-gtk-view.c  inf-text-gtk-view.h  inf-text-gtk-viewport.c  inf-text-gtk-viewport.h
test/: .gitignore  Makefile.am  README  inf-test-browser.c  inf-test-certificate-request.c  inf-test-certificate-validate.c  inf-test-chat.c  inf-test-chunk.c  inf-test-daemon.c  inf-test-gtk-browser.c  inf-test-mass-join.c  inf-test-reduce-replay.c  inf-test-set-acl.c  inf-test-state-vector.c  inf-test-stream.xml  inf-test-tcp-connection.c  inf-test-tcp-server.c  inf-test-text-cleanup.c  inf-test-text-fixline.c  inf-test-text-operations.c  inf-test-text-quick-write.c  inf-test-text-recover.c  inf-test-text-replay.c  inf-test-text-session.c  inf-test-traffic-replay.c  inf-test-xml-stream.c  inf-test-xmpp-connection.c  inf-test-xmpp-server.c
(+452 files in other folders)
